added user controller and its functionlity also added uesr routes

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-FRONTEND_URL =
+FRONTEND_URL =""
 MONGODB_URI = mongodb+srv://rajeevpatel8985:<db_password>@cluster0.zll7m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+RESEND_API = re_QJw5SoCm_DZpnFP1rb88sL7f4oBwwCt8m
